// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render caveat if no courses have grading periods 1`] = `
<View
  borderColor="default"
  debug={false}
  display="auto"
  focusColor="info"
  focusPosition="offset"
  focused={false}
  overflowX="visible"
  overflowY="visible"
  position="static"
  shouldAnimateFocus={true}
>
  <View
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
        wrap="normal"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    key="1"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "blue",
        }
      }
    >
      <Button
        as="button"
        cursor="pointer"
        display="inline-block"
        elementRef={[Function]}
        href="/courses/1/grades"
        margin="0"
        size="small"
        textAlign="center"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
        withBackground={true}
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
          wrap="normal"
        >
          Ticket to Ride 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
      wrap="normal"
    >
      No Grade
    </Text>
  </View>
</View>
`;

exports[`renders a loading spinner when loading 1`] = `
<View
  borderColor="default"
  debug={false}
  display="auto"
  focusColor="info"
  focusPosition="offset"
  focused={false}
  overflowX="visible"
  overflowY="visible"
  position="static"
  shouldAnimateFocus={true}
>
  <View
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
        wrap="normal"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Spinner
      as="div"
      renderTitle={[Function]}
      size="small"
      variant="default"
    />
  </View>
</View>
`;

exports[`renders an ErrorAlert if there is an error loading grades 1`] = `
<View
  borderColor="default"
  debug={false}
  display="auto"
  focusColor="info"
  focusPosition="offset"
  focused={false}
  overflowX="visible"
  overflowY="visible"
  position="static"
  shouldAnimateFocus={true}
>
  <ErrorAlert
    error="There was an error"
  >
    Error loading grades
  </ErrorAlert>
  <View
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
        wrap="normal"
      >
        My Grades
      </Text>
    </Heading>
  </View>
</View>
`;

exports[`renders some course grades 1`] = `
<View
  borderColor="default"
  debug={false}
  display="auto"
  focusColor="info"
  focusPosition="offset"
  focused={false}
  overflowX="visible"
  overflowY="visible"
  position="static"
  shouldAnimateFocus={true}
>
  <View
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Heading
      border="none"
      color="inherit"
      ellipsis={false}
      level="h2"
      margin="0 0 large 0"
    >
      <Text
        as="span"
        letterSpacing="normal"
        size="medium"
        weight="bold"
        wrap="normal"
      >
        My Grades
      </Text>
    </Heading>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    key="1"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "blue",
        }
      }
    >
      <Button
        as="button"
        cursor="pointer"
        display="inline-block"
        elementRef={[Function]}
        href="/courses/1/grades"
        margin="0"
        size="small"
        textAlign="center"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
        withBackground={true}
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
          wrap="normal"
        >
          Ticket to Ride 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
      wrap="normal"
    >
      No Grade
    </Text>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    key="2"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "green",
        }
      }
    >
      <Button
        as="button"
        cursor="pointer"
        display="inline-block"
        elementRef={[Function]}
        href="/courses/2/grades"
        margin="0"
        size="small"
        textAlign="center"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
        withBackground={true}
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
          wrap="normal"
        >
          Ingenious 101
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
      wrap="normal"
    >
      42.34%
    </Text>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    key="3"
    margin="0 0 large 0"
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
  >
    <div
      className="GradesDisplay-styles__course"
      style={
        Object {
          "borderBottom": "solid thin",
          "borderBottomColor": "red",
        }
      }
    >
      <Button
        as="button"
        cursor="pointer"
        display="inline-block"
        elementRef={[Function]}
        href="/courses/3/grades"
        margin="0"
        size="small"
        textAlign="center"
        theme={
          Object {
            "smallHeight": "normal",
            "smallPadding": "0",
          }
        }
        type="button"
        variant="link"
        withBackground={true}
      >
        <Text
          as="span"
          letterSpacing="normal"
          size="medium"
          transform="uppercase"
          wrap="normal"
        >
          Settlers of Catan 201
        </Text>
      </Button>
    </div>
    <Text
      as="div"
      letterSpacing="normal"
      size="large"
      weight="light"
      wrap="normal"
    >
      No Grade
    </Text>
  </View>
  <View
    as="div"
    borderColor="default"
    debug={false}
    display="auto"
    focusColor="info"
    focusPosition="offset"
    focused={false}
    overflowX="visible"
    overflowY="visible"
    position="static"
    shouldAnimateFocus={true}
    textAlign="center"
  >
    <Text
      as="span"
      fontStyle="italic"
      letterSpacing="normal"
      size="x-small"
      wrap="normal"
    >
      *Only most recent grading period shown.
    </Text>
  </View>
</View>
`;
